<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Budget app</string>
    <string name="title_home">Incomes</string>
    <string name="title_dashboard">Expenses</string>
    <string name="title_notifications">Dashboard</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hint_create_title">Write a title</string>
    <string name="hint_create_description">Write a description</string>
    <string name="hint_create_amount">Set an amount</string>
    <string name="text_btn_create">Create</string>
    <string name="text_btn_card_delete">Delete</string>
    <string name="btn_contexttext_add_income">Add a new income</string>
    <string name="btn_details_backbtn">Back</string>
    <string name="btn_details_deletebtn">Delete</string>
    <string name="rd_create_income" translatable="false" />
    <string name="rd_choose_income">Income</string>
    <string name="rd_create_choose_expense" translatable="false" />
    <string name="rd_choose_expense">Expense</string>
    <string name="bottom_nav_expenses">Expenses</string>
    <string name="txt_bottom_dashboard">Dashboard</string>
    <string name="tv_title_dashboard">Welcome to your dashboard</string>
    <string name="tv_dashboard_secondTitle">Statistics</string>
    <string name="tv_progressbar">Progression of the budget</string>
    <string name="tv_progress">Progression</string>
    <string name="context_desc_img_incomes">total incomes image</string>
    <string name="context_desc_expenses">total expenses image</string>
    <string name="contextDesc" translatable="false">Balance image</string>
    <string name="menu_Search_icon">Search</string>
    <string name="settings_description">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_label">Search</string>
    <string name="title_settings">Settings</string>
    <string name="pref_accept_tos">Agree to terms of service</string>
    <string name="pref_languages">Choose your language</string>
    <string name="pref_title_list_languages" >List of languages</string>
    <string name="txt_snackbar_apply" >Apply</string>
    <string name="txt_snackbar_title" >Accept the terms of use please</string>
    <string name="txt_title_limitDialog" >Set a limit</string>
    <string name="tv_title_limit" translatable="false">Limit button</string>
    <string name="btn_set_limit">Set a limit</string>
    <string name="tv_limit">Limit set at:</string>
    <string name="txt_btn_postiveDialog">Set limit</string>
    <string name="txt_btn_negativeDialog">Dismiss</string>
    <string name="hint_input_limit">Set a number</string>
    <string name="txt_title_Warningdialog">Warning limit reached</string>
    <string name="txt_wariningdialog_toDashboard">Reset the limit in dashboard</string>
    <string name="txt_warningdialog_create">Create anywhere</string>
    <string name="txt_toast_languages">changes will be applied after leaving the dashboard</string>
    <string name="txt_snackbarr_languages_btn">OK</string>
    <string-array name="pref_language_list" tools:ignore="InconsistentArrays">
     <item>NL</item>
     <item>ENG</item>
        <item>FR</item>
    </string-array>
</resources>