<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android_examen_couckantoine.ui.Incomes.IncomesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_Incomes" >
        <action
            android:id="@+id/action_navigation_home_to_createFragment"
            app:destination="@id/createFragment" />
        <action
            android:id="@+id/action_navigation_home_to_details"
            app:destination="@id/details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android_examen_couckantoine.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android_examen_couckantoine.ui.Expenses.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/createFragment"
        android:name="com.example.android_examen_couckantoine.ui.other.CreateFragment"
        android:label="CreateFragment" />
    <fragment
        android:id="@+id/details"
        android:name="com.example.android_examen_couckantoine.ui.other.detailsFragment"
        android:label="fragment_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="Budget"
            app:argType="com.example.android_examen_couckantoine.Models.Budget_item" />
    </fragment>
</navigation>