<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <View
        android:id="@+id/img_total_incomes"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_dashboard" />

    <ImageView
        android:id="@+id/iv_incomes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/context_desc_img_incomes"
        android:src="@drawable/moneybag"
        app:layout_constraintBottom_toBottomOf="@+id/img_total_incomes"
        app:layout_constraintEnd_toEndOf="@+id/img_total_incomes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_total_incomes"
        app:layout_constraintTop_toTopOf="@+id/img_total_incomes"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_title_dashboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_title_dashboard"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/img_total_expenses"
        android:layout_width="93dp"
        android:layout_height="69dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_total_incomes" />

    <ImageView
        android:id="@+id/iv_expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/context_desc_expenses"
        android:src="@drawable/euro"
        app:layout_constraintBottom_toBottomOf="@+id/img_total_expenses"
        app:layout_constraintEnd_toEndOf="@+id/img_total_expenses"
        app:layout_constraintStart_toStartOf="@+id/img_total_expenses"
        app:layout_constraintTop_toTopOf="@+id/img_total_expenses" />

    <View
        android:id="@+id/img_Balance"
        android:layout_width="95dp"
        android:layout_height="66dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_total_expenses" />

    <ImageView
        android:id="@+id/iv_balance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/contextDesc"
        android:src="@drawable/euro2"
        app:layout_constraintBottom_toBottomOf="@+id/img_Balance"
        app:layout_constraintEnd_toEndOf="@+id/img_Balance"
        app:layout_constraintStart_toStartOf="@+id/img_Balance"
        app:layout_constraintTop_toTopOf="@+id/img_Balance"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_dashboard_total_incomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_total_incomes"
        tools:text="€150" />

    <TextView
        android:id="@+id/tv_dashboard_total_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_total_expenses"
        tools:text="€150" />

    <TextView
        android:id="@+id/tv_dashboard_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Balance"
        tools:text="€150" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="249dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:max="100"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_porgressbar"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_secondtitle" />

    <TextView
        android:id="@+id/tv_dashboard_secondtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_dashboard_secondTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_balance" />

    <TextView
        android:id="@+id/tv_porgressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_progress"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_secondtitle"
        app:layout_constraintVertical_bias="0.384" />

</androidx.constraintlayout.widget.ConstraintLayout>